Fixed bullit alignment

--- a/src/main.css
+++ b/src/main.css
@@ -82,6 +82,8 @@ p, i{
     height: 15px;
     border: solid 3px white;
     border-radius: 50px;
+    position: relative;
+    top: 1rem;
 }
 
 /* Animations */
